# mit_6.824_CXX

./: CMakeLists.txt  main.cpp
cmake/: ide.cmake
include/: task.h  worker.h
include/bqueue/: bqueue.h  bqueue.hpp
include/master/: master.h
include/task/: task.h
include/worker/: worker.h
src/: CMakeLists.txt  bqueue.cpp  master.cpp  task.cpp  worker.cpp
src/master/: master.cpp
tests/: CMakeLists.txt  test_bqueue.cpp
tests/bqueue/: test_bqueue.cpp
